manifesto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: 790946953677.dkr.ecr.ap-northeast-2.amazonaws.com/skills-user:latest
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowlist
  labels:
    app: allowlist
spec:
  replicas: 3
  selector:
    matchLabels:
      app: allowlist
  template:
    metadata:
      labels:
        app: allowlist
    spec:
      containers:
      - name: allowlist
        image: 790946953677.dkr.ecr.ap-northeast-2.amazonaws.com/skills-allowlist:latest
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event
  labels:
    app: event
spec:
  replicas: 3
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
      - name: event
        image: 790946953677.dkr.ecr.ap-northeast-2.amazonaws.com/skills-event:latest
        ports:
        - containerPort: 8080
