manifesto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 8080
      targetPort: 8080
