manifesto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0c6a0e8c763da47d5,subnet-02aae80689ef641da,subnet-0fc4d16e99d8df666
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-06182e710d7224ba1
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=0
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /allowlist
        pathType: Prefix
        backend:
          service:
            name: allowlist
            port:
              number: 8080
      - path: /event
        pathType: Prefix
        backend:
          service:
            name: event
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 8080
